--- a/src/app/user.component.html
+++ b/src/app/user.component.html
@@ -1,4 +1,4 @@
-<h1>Hello {{title}}</h1>
+<h1>{{title}}</h1>
 <!-- <h2>Hello {{ user.name }}. This is your detail:</h2>
 <div><label>id:</label> {{user.id}}</div>
 <div><label>name:</label> {{user.name}}</div>
@@ -14,11 +14,11 @@
     </li>
 </ul>
 
-<div *ngIf="selectedUser">
-    <h2>You selected: {{selectedUser.name}} with details:</h2>
-    <div><label for="">User id:</label> {{selectedUser.id}}</div>
-    <div class="">
-        <label for="">name:</label>
-        <input placeholder="Edit your name here" [(ngModel)] = "selectedUser.name" />
-    </div>
-</div>
+<nav>
+    <a routerLink="/view1" routerLinkActive = "active">Link to view 2</a>
+    <a routerLink="/view2" routerLinkActive = "active">Link to view 2</a>
+</nav>
+<!-- <router-outlet></router-outlet> -->
+
+
+<user-detail [selectedUser] = "selectedUser"></user-detail>
